== MIME::Types 1.17.1 / 2011-10-23
* Minor Enhancements:
  * Implemented modern 'hoe' semantics.
  * Switched to minitest instead of test/unit.
  * Converted documentation from .txt to .rdoc.
  * Removed setup.rb. (Issue #3:
    https://github.com/halostatue/mime-types/issues/3).
  * Should no longer complain about missing RubyGems keys (Issue #2:
    https://github.com/halostatue/mime-types/issues/2).
  * Added .mp4 and .mpg4 as recognized extensions for
    {application,audio,video}/mp4 per RFC4337. (Issue #1:
    https://github.com/halostatue/mime-types/issues/1).
  * Added audio/x-aac and .aac per RubyForge issue #28054
    (http://rubyforge.org/tracker/index.php?func=detail&aid=28054&group_id=293&atid=1194).
  * Made it much easier to update MIME types from this point forward.
  * Updated MIME types from IANA.

== MIME::Types 1.16
* Made compatible with Ruby 1.8.6, 1.8.7, and 1.9.1.
* Switched to the 'hoe' gem system and added a lot of build-time tools.
* Updated the MIME types to the list based on the values in the Perl library
  version 1.27. Also updated based on external source information and bug
  reports.
* This is the last planned version of MIME::Types 1.x. Work will be
  starting soon on MIME::Types 2.x with richer data querying mechanisms
  and support for external data sources.

== MIME::Types 1.15
* Removed lib/mime/type.rb to form a single MIME::Types database source. It
  is unlikely that one will ever need MIME::Type without MIME::Types.
* Re-synchronized the MIME type list with the sources, focusing primarily on
  the IANA list.
* Added more detailed source information for MIME::Type objects.
* Changed MIME::Types from a module to a class with a default instance. There
  should be no difference in usage.
* Removed MIME::Types::DATA_VERSION; it is now an attribute on the
  MIME::Types instance.
* NOTE: Synchronization with the Perl version of MIME::Types is no longer a
  priority as of this release. The data format and information has changed.