@@ -1,3 +1,7 @@
+== MIME::Types 1.17.2 / 2011-10-25
+* Bug Fixes:
+  * Fixed an issue with Ruby 1.9 and file encoding.
+
 == MIME::Types 1.17.1 / 2011-10-23
 * Minor Enhancements:
   * Implemented modern 'hoe' semantics.
